[package]
authors = ["Roma Sokolov", "Alexander Zhuravlev", "Natesh Narain"]
categories = ["embedded", "hardware-support", "no-std"]
description = "A platform agnostic driver to interface with the BMP280 pressure sensor"
documentation = "https://docs.rs/bmp280-driver"
keywords = ["embedded-hal-driver", "accelerometer", "compass", "MEMS"]
license = "MIT"
name = "bmp280-driver"
repository = "https://github.com/nnarain/bmp280"
version = "0.0.6"

[dependencies]
embedded-hal = "0.2.1"
